--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,8 +1,7 @@
-$bp-largest: 75em; //1200px
-$bp-large: 68.75em; //1100px
-$bp-medium: 56.25em; //900px
-$bp-small: 37.5em; //600px
-$bp-smallest: 31.25em; //500px
+$bp-large: 1200px;
+$bp-medium: 979px;
+$bp-small: 767px;
+$bp-smallest: 480px;
 
 
 *,
@@ -21,12 +20,28 @@ $bp-smallest: 31.25em; //500px
     }
 }
 
+[class*='col-'] {
+    min-height: 1px;
+
+    @media (max-width: $bp-small) {
+        width: 100%;
+    }
+}
+
 html {
     font-size: 62.5%;
     box-sizing: border-box;
 
-    @media only screen and(max-width: $bp-largest) {
+    @media only screen and(max-width: $bp-large) {
         font-size: 50%;
+    }
+
+    @media only screen and(max-width: $bp-small) {
+        font-size: 45%;
+    }
+
+    @media only screen and(max-width: $bp-smallest) {
+        font-size: 40%;
     }
 }
 
