--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,6 @@
   font-size: 2.9rem;
   text-transform: capitalize;
   line-height: 1.5;
-  padding: 0 1rem;
   color: #07043b;
 }
 
@@ -34,10 +33,16 @@
 
 .header {
   background: linear-gradient(to right, #100a6e, #827eca);
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85vh);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
   padding: 4rem 4.5rem;
   height: 95vh;
   color: #fff;
+
+  @media only screen and(max-width: $bp-small) {
+    background: linear-gradient(to bottom, #100a6e, #827eca);
+    padding: 2.5rem;
+    height: auto;
+  }
 
   &__nav {
     display: flex;
@@ -60,13 +65,26 @@
   &__main {
     display: flex;
     align-items: center;
-    margin-top: 8rem;
+    margin: 10rem 0 15rem;
     height: 50vh;
+
+    @media only screen and(max-width: $bp-small) {
+      flex-direction: column;
+      height: auto;
+    }
   }
 
   &__info {
     flex: 0 0 58%;
     padding-right: 3rem;
+
+    @media only screen and(max-width: $bp-small) {
+      flex: 0 0 40%;
+      order: 2;
+      margin-top: 3rem;
+      text-align: center;
+      padding-right: 0;
+    }
 
     &--btn {
       font-size: 2.1rem;
@@ -82,6 +100,15 @@
     background-repeat: no-repeat;
     background-position: center;
     height: 40rem;
+
+    @media only screen and(max-width: $bp-small) {
+      width: 100%;
+      height: 30rem;
+    }
+
+    @media only screen and(max-width: $bp-smallest) {
+      height: 25rem;
+    }
   }
 }
 
@@ -93,6 +120,10 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+
+  @media only screen and(max-width: $bp-small) {
+    padding: 0 2.5rem;
+  }
 
   &__banner {
     background-image: url("../images/illustration-features.svg");
@@ -160,6 +191,10 @@
 
     ::-moz-placeholder {
       color: #ccc;
+    }
+
+    &--btn {
+      padding: 1.1rem 6.5rem;
     }
   }
 }
