--- a/css/style.css
+++ b/css/style.css
@@ -202,3 +202,21 @@ body {
     color: #ccc; }
   .products__form--btn {
     padding: 1.1rem 6.5rem; }
+
+.footer {
+  padding: 5rem 0;
+  background-color: #07043b; }
+  .footer__contact {
+    flex: 0 0 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; }
+    .footer__contact--logo {
+      margin-bottom: 2rem; }
+    .footer__contact a {
+      color: #fff;
+      padding: 1rem 0;
+      text-decoration: none;
+      font-size: 1.5rem; }
+      .footer__contact a span {
+        margin-left: .5rem; }
