--- a/scss/style.scss
+++ b/scss/style.scss
@@ -198,3 +198,31 @@
     }
   }
 }
+
+
+.footer {
+  padding: 5rem 0;
+  background-color: #07043b;
+
+  &__contact {
+    flex: 0 0 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    &--logo {
+      margin-bottom: 2rem;
+    }
+
+    a {
+      color: #fff;
+      padding: 1rem 0;
+      text-decoration: none;
+      font-size: 1.5rem;
+
+      span {
+        margin-left: .5rem;
+      }
+    }
+  }
+}
