--- a/css/style.css
+++ b/css/style.css
@@ -220,3 +220,21 @@ body {
       font-size: 1.5rem; }
       .footer__contact a span {
         margin-left: .5rem; }
+  .footer__more {
+    flex: 0 0 45%;
+    border-left: 1px solid #fff;
+    border-right: 1px solid #fff;
+    display: flex;
+    justify-content: center;
+    color: #fff;
+    padding: 0 2rem; }
+    .footer__more--ul {
+      list-style-type: none;
+      font-size: 1.5rem;
+      padding: 0 3rem; }
+    .footer__more--li {
+      padding: .8rem 0; }
+      .footer__more--li:nth-of-type(1) {
+        font-weight: 600;
+        font-size: 1.6rem;
+        padding-bottom: 1rem; }
