--- a/scss/style.scss
+++ b/scss/style.scss
@@ -225,4 +225,33 @@
       }
     }
   }
+
+  &__more {
+    flex: 0 0 45%;
+    border-left: 1px solid #fff;
+    border-right: 1px solid #fff;
+    display: flex;
+    justify-content: center;
+    color: #fff;
+    padding: 0 2rem;
+
+    &--ul {
+      list-style-type: none;
+      font-size: 1.5rem;
+      padding: 0 3rem;
+
+    }
+
+    &--li {
+      padding: .8rem 0;
+
+      &:nth-of-type(1) {
+        font-weight: 600;
+        font-size: 1.6rem;
+        padding-bottom: 1rem;
+      }
+    }
+  }
+
+
 }
