--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ html {
   box-sizing: border-box; }
   @media only screen and (max-width: 1200px) {
     html {
-      font-size: 50%; } }
+      font-size: 55%; } }
   @media only screen and (max-width: 767px) {
     html {
       font-size: 45%; } }
@@ -57,29 +57,30 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  max-width: 115rem; }
+  max-width: 120rem;
+  position: relative; }
 
 .heading-primary {
-  font-size: 3.6rem;
+  font-size: 4rem;
   text-transform: capitalize;
-  line-height: 1.5; }
+  line-height: 1.4; }
 
 .heading-secondary {
-  font-size: 2.9rem;
+  font-size: 3.25rem;
   text-transform: capitalize;
-  line-height: 1.5;
+  line-height: 1.4;
   color: #07043b; }
 
 .heading-tertiary {
-  font-size: 1.9rem;
+  font-size: 2.1rem;
   color: #07043b; }
 
 .btn-main {
   display: inline-block;
   color: #fff;
   background-color: #06d79d;
-  padding: 1.1rem 2.8rem;
-  font-size: 1.3rem;
+  padding: 1.1rem 3rem;
+  font-size: 1.5rem;
   text-decoration: none;
   border-radius: 3px;
   letter-spacing: .5px;
@@ -87,64 +88,71 @@ body {
   border: none; }
 
 .header {
-  background: linear-gradient(to right, #100a6e, #827eca);
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
-  padding: 4rem 4.5rem;
-  height: 95vh;
-  color: #fff; }
-  @media only screen and (max-width: 767px) {
-    .header {
-      background: linear-gradient(to bottom, #100a6e, #827eca);
-      padding: 2.5rem;
-      height: auto; } }
+  color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  padding: 4rem 0; }
   .header__nav {
     display: flex;
     align-items: center; }
     .header__nav--logo {
       margin-right: auto;
-      height: 4.2rem; }
+      height: 4.5rem; }
     .header__nav--btn {
-      font-size: 1.4rem;
+      font-size: 1.6rem;
       color: inherit;
       text-decoration: none;
       padding: 1rem;
       margin-right: 2rem; }
-  .header__main {
+
+.banner {
+  background: linear-gradient(to right, #100a6e, #827eca);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
+  color: #fff;
+  min-height: 95vh;
+  display: flex;
+  align-items: center; }
+  @media only screen and (max-width: 767px) {
+    .banner {
+      background: linear-gradient(to bottom, #100a6e, #827eca);
+      padding: 2.5rem;
+      height: auto; } }
+  .banner__main {
     display: flex;
-    align-items: center;
-    margin: 10rem 0 15rem;
-    height: 50vh; }
+    align-items: center; }
     @media only screen and (max-width: 767px) {
-      .header__main {
-        flex-direction: column;
-        height: auto; } }
-  .header__info {
+      .banner__main {
+        flex-direction: column; } }
+  .banner__info {
     flex: 0 0 58%;
     padding-right: 3rem; }
     @media only screen and (max-width: 767px) {
-      .header__info {
+      .banner__info {
         flex: 0 0 40%;
         order: 2;
         margin-top: 3rem;
         text-align: center;
         padding-right: 0; } }
-    .header__info--btn {
-      font-size: 2.1rem;
+    .banner__info--btn {
+      font-size: 2.4rem;
       padding: 2rem 8.2rem;
-      margin-top: 3rem; }
-  .header__banner {
+      margin-top: 4rem; }
+  .banner__banner {
     flex: 1;
     background-image: url("../images/illustration-hero.svg");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    height: 40rem; }
+    height: 44rem; }
     @media only screen and (max-width: 767px) {
-      .header__banner {
+      .banner__banner {
         width: 100%;
         height: 30rem; } }
     @media only screen and (max-width: 480px) {
-      .header__banner {
+      .banner__banner {
         height: 25rem; } }
 
 .products {
@@ -161,11 +169,11 @@ body {
     background-image: url("../images/illustration-features.svg");
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: left center;
     flex: 0 0 40%;
-    height: 30rem; }
+    height: 34rem; }
   .products__box {
-    margin: 9rem 0;
+    margin: 9rem 0 12rem;
     flex: 1;
     display: flex;
     flex-wrap: wrap; }
@@ -173,25 +181,33 @@ body {
     padding: 3rem 5rem 2rem;
     text-align: left; }
     .products__product--text {
-      font-size: 1.5rem;
-      padding-top: 1rem;
+      font-size: 1.6rem;
+      padding-top: 2rem;
       line-height: 1.5;
       color: #8d8d8d; }
   .products__text {
     width: 60%;
-    margin: 2rem auto;
-    font-size: 1.5rem;
+    margin: 3rem auto;
+    font-size: 1.6rem;
     color: #100a6e;
+    line-height: 1.4;
     font-weight: 600; }
   .products__form input {
-    width: 30%;
-    border-radius: 3px;
-    border: 1px solid #dbdbdb;
-    padding: 1rem 2rem;
-    box-shadow: 0 0 5px rgba(204, 204, 204, 0.2);
-    margin-right: 2rem; }
+    width: 35%;
+    font-size: 1.6rem;
+    border-radius: 5px;
+    padding: 1.7rem 4rem 1.3rem;
+    border: none;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
+    margin-right: 2rem;
+    transition: all .3s;
+    border-bottom: 3px solid transparent; }
     .products__form input:focus {
-      outline: none; }
+      outline: none;
+      border-bottom: 3px solid #06d79d;
+      box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2); }
+    .products__form input:focus:invalid {
+      border-bottom: 3px solid #ff7730; }
   .products__form ::-webkit-input-placeholder {
     color: #ccc; }
   .products__form ::-moz-placeholder {
@@ -204,7 +220,8 @@ body {
     padding: 1.1rem 6.5rem; }
 
 .footer {
-  padding: 5rem 0;
+  padding: 15rem 0 10rem;
+  clip-path: polygon(0 0, 100% 10rem, 100% 100%, 0 100%);
   background-color: #07043b; }
   .footer__contact {
     flex: 0 0 25%;
@@ -230,11 +247,32 @@ body {
     padding: 0 2rem; }
     .footer__more--ul {
       list-style-type: none;
-      font-size: 1.5rem;
+      font-size: 1.4rem;
       padding: 0 3rem; }
     .footer__more--li {
       padding: .8rem 0; }
       .footer__more--li:nth-of-type(1) {
         font-weight: 600;
-        font-size: 1.6rem;
+        font-size: 1.5rem;
         padding-bottom: 1rem; }
+  .footer__form {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin-left: 5rem;
+    align-items: flex-end; }
+    .footer__form--text {
+      color: #fff;
+      font-size: 1.4rem;
+      text-align: right;
+      padding-bottom: 2rem; }
+    .footer__form--input {
+      border: none;
+      border-radius: 3px;
+      padding: 1rem 2rem;
+      font-size: 1.4rem;
+      margin-bottom: 2rem; }
+      .footer__form--input:focus {
+        outline: none; }
+    .footer__form--btn {
+      padding: 1.1rem 5.5rem; }
