--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -33,7 +33,7 @@ html {
     box-sizing: border-box;
 
     @media only screen and(max-width: $bp-large) {
-        font-size: 50%;
+        font-size: 55%;
     }
 
     @media only screen and(max-width: $bp-small) {
@@ -53,5 +53,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
-    max-width: 115rem;
+    max-width: 120rem;
+    position: relative;
 }
