--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,20 +1,20 @@
 @import "base";
 
 .heading-primary {
-  font-size: 3.6rem;
+  font-size: 4rem;
   text-transform: capitalize;
-  line-height: 1.5;
+  line-height: 1.4;
 }
 
 .heading-secondary {
-  font-size: 2.9rem;
+  font-size: 3.25rem;
   text-transform: capitalize;
-  line-height: 1.5;
+  line-height: 1.4;
   color: #07043b;
 }
 
 .heading-tertiary {
-  font-size: 1.9rem;
+  font-size: 2.1rem;
   color: #07043b;
 }
 
@@ -22,8 +22,8 @@
   display: inline-block;
   color: #fff;
   background-color: #06d79d;
-  padding: 1.1rem 2.8rem;
-  font-size: 1.3rem;
+  padding: 1.1rem 3rem;
+  font-size: 1.5rem;
   text-decoration: none;
   border-radius: 3px;
   letter-spacing: .5px;
@@ -32,17 +32,14 @@
 }
 
 .header {
-  background: linear-gradient(to right, #100a6e, #827eca);
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
-  padding: 4rem 4.5rem;
-  height: 95vh;
   color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  padding: 4rem 0;
 
-  @media only screen and(max-width: $bp-small) {
-    background: linear-gradient(to bottom, #100a6e, #827eca);
-    padding: 2.5rem;
-    height: auto;
-  }
 
   &__nav {
     display: flex;
@@ -50,27 +47,40 @@
 
     &--logo {
       margin-right: auto;
-      height: 4.2rem;
+      height: 4.5rem;
     }
 
     &--btn {
-      font-size: 1.4rem;
+      font-size: 1.6rem;
       color: inherit;
       text-decoration: none;
       padding: 1rem;
       margin-right: 2rem;
     }
   }
+}
+
+.banner {
+  background: linear-gradient(to right, #100a6e, #827eca);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
+  color: #fff;
+  min-height: 95vh;
+
+  @media only screen and(max-width: $bp-small) {
+    background: linear-gradient(to bottom, #100a6e, #827eca);
+    padding: 2.5rem;
+    height: auto;
+  }
+
+  display: flex;
+  align-items: center;
 
   &__main {
     display: flex;
     align-items: center;
-    margin: 10rem 0 15rem;
-    height: 50vh;
 
     @media only screen and(max-width: $bp-small) {
       flex-direction: column;
-      height: auto;
     }
   }
 
@@ -87,9 +97,9 @@
     }
 
     &--btn {
-      font-size: 2.1rem;
+      font-size: 2.4rem;
       padding: 2rem 8.2rem;
-      margin-top: 3rem;
+      margin-top: 4rem;
     }
   }
 
@@ -99,7 +109,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    height: 40rem;
+    height: 44rem;
 
     @media only screen and(max-width: $bp-small) {
       width: 100%;
@@ -111,7 +121,6 @@
     }
   }
 }
-
 
 .products {
   margin: 50px 0;
@@ -129,13 +138,13 @@
     background-image: url("../images/illustration-features.svg");
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: left center;
     flex: 0 0 40%;
-    height: 30rem;
+    height: 34rem;
   }
 
   &__box {
-    margin: 9rem 0;
+    margin: 9rem 0 12rem;
     flex: 1;
 
     display: flex;
@@ -147,8 +156,8 @@
     text-align: left;
 
     &--text {
-      font-size: 1.5rem;
-      padding-top: 1rem;
+      font-size: 1.6rem;
+      padding-top: 2rem;
       line-height: 1.5;
       color: #8d8d8d;
     }
@@ -156,24 +165,34 @@
 
   &__text {
     width: 60%;
-    margin: 2rem auto;
-    font-size: 1.5rem;
+    margin: 3rem auto;
+    font-size: 1.6rem;
     color: #100a6e;
+    line-height: 1.4;
     font-weight: 600;
   }
 
   &__form {
 
     input {
-      width: 30%;
-      border-radius: 3px;
-      border: 1px solid #dbdbdb;
-      padding: 1rem 2rem;
-      box-shadow: 0 0 5px rgba(#ccc, 0.2);
+      width: 35%;
+      font-size: 1.6rem;
+      border-radius: 5px;
+      padding: 1.7rem 4rem 1.3rem;
+      border: none;
+      box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
       margin-right: 2rem;
+      transition: all .3s;
+      border-bottom: 3px solid transparent;
 
       &:focus {
         outline: none;
+        border-bottom: 3px solid #06d79d;
+        box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+      }
+
+      &:focus:invalid {
+        border-bottom: 3px solid #ff7730;
       }
     }
 
@@ -201,8 +220,10 @@
 
 
 .footer {
-  padding: 5rem 0;
+  padding: 15rem 0 10rem;
+  clip-path: polygon(0 0, 100% 10rem, 100% 100%, 0 100%);
   background-color: #07043b;
+
 
   &__contact {
     flex: 0 0 25%;
@@ -237,7 +258,7 @@
 
     &--ul {
       list-style-type: none;
-      font-size: 1.5rem;
+      font-size: 1.4rem;
       padding: 0 3rem;
 
     }
@@ -247,11 +268,40 @@
 
       &:nth-of-type(1) {
         font-weight: 600;
-        font-size: 1.6rem;
+        font-size: 1.5rem;
         padding-bottom: 1rem;
       }
     }
   }
 
+  &__form {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin-left: 5rem;
+    align-items: flex-end;
 
+    &--text {
+      color: #fff;
+      font-size: 1.4rem;
+      text-align: right;
+      padding-bottom: 2rem;
+    }
+
+    &--input {
+      border: none;
+      border-radius: 3px;
+      padding: 1rem 2rem;
+      font-size: 1.4rem;
+      margin-bottom: 2rem;
+
+      &:focus {
+        outline: none;
+      }
+    }
+
+    &--btn {
+      padding: 1.1rem 5.5rem;
+    }
+  }
 }
