--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,7 +26,7 @@
   font-size: 1.5rem;
   text-decoration: none;
   border-radius: 3px;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
   font-weight: 600;
   border: none;
 }
@@ -39,7 +39,6 @@
   width: 100%;
   z-index: 10;
   padding: 4rem 0;
-
 
   &__nav {
     display: flex;
@@ -123,7 +122,7 @@
 }
 
 .products {
-  margin: 50px 0;
+  margin: 10rem 0;
   width: 100%;
   text-align: center;
   display: flex;
@@ -173,7 +172,6 @@
   }
 
   &__form {
-
     input {
       width: 35%;
       font-size: 1.6rem;
@@ -182,7 +180,7 @@
       border: none;
       box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
       margin-right: 2rem;
-      transition: all .3s;
+      transition: all 0.3s;
       border-bottom: 3px solid transparent;
 
       &:focus {
@@ -218,31 +216,32 @@
   }
 }
 
-
 .footer {
   padding: 15rem 0 10rem;
   clip-path: polygon(0 0, 100% 10rem, 100% 100%, 0 100%);
   background-color: #07043b;
 
-
   &__contact {
-    flex: 0 0 25%;
+    flex: 0 0 23%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 
     &--logo {
-      margin-bottom: 2rem;
+      margin-bottom: 3.5rem;
+      height: 5.7rem;
     }
 
     a {
       color: #fff;
       padding: 1rem 0;
       text-decoration: none;
-      font-size: 1.5rem;
+      font-size: 1.7rem;
+      display: flex;
+      align-items: center;
 
       span {
-        margin-left: .5rem;
+        margin-left: 1rem;
       }
     }
   }
@@ -258,18 +257,19 @@
 
     &--ul {
       list-style-type: none;
-      font-size: 1.4rem;
-      padding: 0 3rem;
-
+      font-size: 1.6rem;
+      padding: 0 3.5rem;
+      letter-spacing: 0.5px;
     }
 
     &--li {
-      padding: .8rem 0;
+      padding: 1rem 0;
 
       &:nth-of-type(1) {
         font-weight: 600;
-        font-size: 1.5rem;
-        padding-bottom: 1rem;
+        font-size: 2rem;
+        padding-top: 0;
+        padding-bottom: 1.4rem;
       }
     }
   }
@@ -278,22 +278,23 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    margin-left: 5rem;
+    margin-left: 9rem;
     align-items: flex-end;
 
     &--text {
       color: #fff;
-      font-size: 1.4rem;
+      font-size: 1.6rem;
       text-align: right;
-      padding-bottom: 2rem;
+      padding-bottom: 3rem;
     }
 
     &--input {
       border: none;
       border-radius: 3px;
-      padding: 1rem 2rem;
+      padding: 1.5rem 2rem;
       font-size: 1.4rem;
       margin-bottom: 2rem;
+      width: 100%;
 
       &:focus {
         outline: none;
@@ -301,7 +302,7 @@
     }
 
     &--btn {
-      padding: 1.1rem 5.5rem;
+      padding: 1.5rem 8.5rem;
     }
   }
 }
