--- a/css/style.css
+++ b/css/style.css
@@ -69,23 +69,33 @@ body {
   font-size: 3.25rem;
   text-transform: capitalize;
   line-height: 1.4;
-  color: #07043b; }
+  color: #100a6e; }
 
 .heading-tertiary {
   font-size: 2.1rem;
-  color: #07043b; }
+  color: #100a6e; }
 
 .btn-main {
   display: inline-block;
   color: #fff;
   background-color: #06d79d;
   padding: 1.1rem 3rem;
-  font-size: 1.5rem;
+  border: 3px solid #06d79d;
+  font-size: 1.6rem;
   text-decoration: none;
-  border-radius: 3px;
+  border-radius: 5px;
   letter-spacing: 0.5px;
-  font-weight: 600;
-  border: none; }
+  transition: all 0.2s;
+  font-weight: 600; }
+  .btn-main:hover {
+    border: 3px solid #06d79d;
+    background-color: transparent;
+    color: #06d79d;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+    transform: translateY(-2px); }
+  .btn-main:active {
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    transform: translateY(-1px); }
 
 .header {
   color: #fff;
@@ -106,7 +116,19 @@ body {
       color: inherit;
       text-decoration: none;
       padding: 1rem;
-      margin-right: 2rem; }
+      margin-right: 2rem;
+      position: relative; }
+      .header__nav--btn::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        height: 3px;
+        width: 0;
+        background-color: currentColor;
+        transition: all 0.2s; }
+      .header__nav--btn:hover::after, .header__nav--btn:active::after {
+        width: 100%; }
 
 .banner {
   background: linear-gradient(to right, #100a6e, #827eca);
@@ -196,7 +218,7 @@ body {
     width: 35%;
     font-size: 1.6rem;
     border-radius: 5px;
-    padding: 1.7rem 4rem 1.3rem;
+    padding: 1.6rem 4rem 1.3rem;
     border: none;
     box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
     margin-right: 2rem;
@@ -217,7 +239,7 @@ body {
   .products__form ::-moz-placeholder {
     color: #ccc; }
   .products__form--btn {
-    padding: 1.1rem 6.5rem; }
+    padding: 1.3rem 6.5rem; }
 
 .footer {
   padding: 15rem 0 10rem;
