--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -53,6 +53,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
-    max-width: 120rem;
+    max-width: 1200px;
     position: relative;
 }
