--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -55,4 +55,8 @@ body {
     margin: 0 auto;
     max-width: 1200px;
     position: relative;
+
+    @media only screen and(max-width: $bp-small) {
+        flex-direction: column;
+    }
 }
