--- a/scss/style.scss
+++ b/scss/style.scss
@@ -41,12 +41,12 @@ $font-primary-light: #827eca;
     border: 3px solid #06d79d;
     background-color: transparent;
     color: #06d79d;
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+    box-shadow: 0 1rem 2rem rgba(256, 256, 256, .15);
     transform: translateY(-2px);
   }
 
   &:active {
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0.5rem 1rem rgba(256, 256, 256, 0.15);
     transform: translateY(-1px);
   }
 }
@@ -62,6 +62,14 @@ $font-primary-light: #827eca;
 
   @media only screen and(max-width: $bp-large) {
     padding: 4rem;
+  }
+
+  @media only screen and(max-width: $bp-small) {
+    padding: 7rem;
+  }
+
+  @media only screen and(max-width: $bp-smallest) {
+    padding: 6rem 4rem;
   }
 
   &__nav {
@@ -104,7 +112,7 @@ $font-primary-light: #827eca;
 
 .banner {
   background: linear-gradient(to right, $font-primary, $font-primary-light);
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
   color: #fff;
   min-height: 95vh;
 
@@ -115,6 +123,10 @@ $font-primary-light: #827eca;
   @media only screen and(max-width: $bp-small) {
     background: linear-gradient(to bottom, $font-primary, $font-primary-light);
     min-height: auto;
+  }
+
+  @media only screen and(min-width: $bp-smallest) and(max-width: $bp-small) {
+    padding: 0 7rem;
   }
 
   display: flex;
@@ -178,6 +190,10 @@ $font-primary-light: #827eca;
 
   @media only screen and(max-width: $bp-large) {
     padding: 0 4rem;
+  }
+
+  @media only screen and(min-width: $bp-smallest) and(max-width: $bp-small) {
+    padding: 0 7rem;
   }
 
   &__banner {
@@ -250,7 +266,7 @@ $font-primary-light: #827eca;
       width: 35%;
       font-size: $default-font-size;
       border-radius: 5px;
-      padding: $default-font-size 4rem 1.3rem;
+      padding: 1.4rem 4rem 1.1rem;
       border: none;
       box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
       margin-right: 2rem;
@@ -295,7 +311,7 @@ $font-primary-light: #827eca;
     }
 
     &--btn {
-      padding: 1.3rem 6.5rem;
+      padding: 1.1rem 8rem;
 
       @media only screen and(max-width: $bp-small) {
         width: 60%;
@@ -309,8 +325,8 @@ $font-primary-light: #827eca;
 }
 
 .footer {
-  padding: 20rem 0 15rem;
-  clip-path: polygon(0 0, 100% 10rem, 100% 100%, 0 100%);
+  padding: 23rem 0 15rem;
+  clip-path: polygon(0 0, 100% 13rem, 100% 100%, 0 100%);
   background-color: $font-primary-dark;
 
   @media only screen and(max-width: $bp-large) {
@@ -318,9 +334,9 @@ $font-primary-light: #827eca;
     padding-right: 4rem;
   }
 
-  @media only screen and(max-width: $bp-small) {
-    padding-left: 6rem;
-    padding-right: 6rem;
+  @media only screen and(min-width: $bp-smallest) and(max-width: $bp-small) {
+    padding-left: 7rem;
+    padding-right: 7rem;
   }
 
   &__contact {
