--- a/css/style.css
+++ b/css/style.css
@@ -216,11 +216,13 @@ body {
     flex: 0 0 40%;
     height: 34rem;
     width: 100%; }
+    @media only screen and (max-width: 979px) {
+      .products__banner {
+        height: 30rem; } }
     @media only screen and (max-width: 767px) {
       .products__banner {
         margin: 8rem 0;
         background-position: center;
-        height: 30rem;
         flex: none; } }
   .products__box {
     margin: 9rem 0 12rem;
@@ -233,6 +235,10 @@ body {
   .products__product {
     padding: 3rem 5rem 2rem;
     text-align: left; }
+    @media only screen and (max-width: 979px) {
+      .products__product {
+        padding-left: 2rem;
+        padding-right: 2rem; } }
     @media only screen and (max-width: 767px) {
       .products__product {
         padding: 0;
@@ -315,11 +321,25 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start; }
-    .footer__contact--logo {
+    @media only screen and (min-width: 480px) and (max-width: 767px) {
+      .footer__contact {
+        flex-direction: row;
+        justify-content: space-around;
+        flex-wrap: wrap; } }
+    @media only screen and (min-width: 480px) and (max-width: 767px) {
+      .footer__contact--img {
+        width: 100%;
+        text-align: center; } }
+    .footer__contact--img img {
       margin-bottom: 3.5rem;
-      height: 5.7rem; }
+      height: 5.7rem;
+      padding: 0 1rem; }
+      @media only screen and (max-width: 767px) {
+        .footer__contact--img img {
+          margin-bottom: 6rem; } }
     .footer__contact a {
       color: #fff;
+      padding: 0 1rem;
       padding: 1rem 0;
       text-decoration: none;
       font-size: 1.7rem;
@@ -342,7 +362,8 @@ body {
       .footer__more {
         order: 1;
         border: none;
-        padding: 0; } }
+        padding: 0;
+        justify-content: space-around; } }
     @media only screen and (max-width: 480px) {
       .footer__more {
         flex-direction: column; } }
@@ -353,10 +374,9 @@ body {
       letter-spacing: 0.5px; }
       @media only screen and (max-width: 767px) {
         .footer__more--ul {
-          margin-top: 4rem; } }
+          margin-top: 7rem; } }
       @media only screen and (max-width: 480px) {
         .footer__more--ul {
-          margin-top: 4rem;
           padding: 0; } }
     .footer__more--li {
       padding: 1rem 0; }
@@ -380,7 +400,7 @@ body {
     @media only screen and (max-width: 767px) {
       .footer__form {
         margin-left: 0;
-        margin-top: 4rem; } }
+        margin-top: 6rem; } }
     .footer__form--text {
       color: #fff;
       font-size: 1.6rem;
@@ -393,6 +413,9 @@ body {
       font-size: 1.4rem;
       margin-bottom: 2rem;
       width: 100%; }
+      @media only screen and (min-width: 480px) and (max-width: 767px) {
+        .footer__form--input {
+          width: 80%; } }
       .footer__form--input:focus {
         outline: none; }
     .footer__form--btn {
