--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -3,6 +3,12 @@ $bp-medium: 979px;
 $bp-small: 767px;
 $bp-smallest: 480px;
 
+$default-font-size: 1.6rem;
+$font-primary-dark: #07043b;
+$font-primary: #100a6e;
+$font-primary-light: #827eca;
+$btn-main-color: #06d79d;
+
 
 *,
 *::after,
