--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ body {
     .flex-container {
       flex-direction: column; } }
 
+/* ----- HEADINGS ----- */
 .heading-primary {
   font-size: 4rem;
   text-transform: capitalize;
@@ -81,6 +82,7 @@ body {
   font-size: 2.1rem;
   color: #100a6e; }
 
+/* ----- BTN ----- */
 .btn-main {
   display: inline-block;
   color: #fff;
